--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Final_Project</string>
+    <string name="home">Home</string>
+    <string name="page">Page</string>
+    <string name="profile">Profile</string>
 </resources>
