--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
     <string name="home">Home</string>
     <string name="page">Page</string>
     <string name="profile">Profile</string>
+    <string name="enter_email">Enter Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="login_text">Login</string>
+    <string name="textview">TextView</string>
+    <string name="login_screen">Login Screen</string>
+    <string name="yellow_logo_description">yellow_logo</string>
+    <string name="login_button_text">Login</string>
+    <string name="register_account_text">Register Account</string>
+    <string name="birthday">Birthday</string>
+    <string name="register_account">Register Account</string>
 </resources>
