--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,6 @@
     <string name="home">Home</string>
     <string name="page">Page</string>
     <string name="profile">Profile</string>
-    <string name="enter_email">Enter Email</string>
-    <string name="enter_password">Enter Password</string>
     <string name="login_text">Login</string>
     <string name="textview">TextView</string>
     <string name="login_screen">Login Screen</string>
@@ -13,4 +11,15 @@
     <string name="register_account_text">Register Account</string>
     <string name="birthday">Birthday</string>
     <string name="register_account">Register Account</string>
+    <string name="Username">Username</string>
+    <string name="Password">Password</string>
+    <string name="username">Username</string>
+    <string name="dob">DOB ?/?/?</string>
+    <string name="register">Register</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="enter_email">Enter Email</string>
+
 </resources>
