Finalised Alpha Version
Signed-off-by: tamuk <tamuka120>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Final_Project</string>
+    <string name="app_name">Sauce</string>
     <string name="home">Home</string>
     <string name="page">Page</string>
     <string name="profile">Profile</string>
@@ -21,5 +21,29 @@
     <string name="email">Email</string>
     <string name="enter_password">Enter Password</string>
     <string name="enter_email">Enter Email</string>
+    <string name="logo_home">logo_home</string>
+    <string name="home_button">Home_button</string>
+    <string name="latest_button">latest button</string>
+    <string name="gaming_button">gaming button</string>
+    <string name="review_button">review button</string>
+    <string name="shopping_button">shopping button</string>
+    <string name="title_activity_navigation">navigation</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="log_out">Log Out</string>
+    <string name="title_activity_home_page">home_page</string>
+    <string name="title_activity_profile">profile</string>
+    <string name="title_activity_game_search">game_search</string>
+    <string name="title_activity_review">review</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="image">image</string>
+    <string name="this_page_is_not_yet_available">This page is not yet available</string>
+    <string name="this_page_is_not_yet_available1">This page is not yet available</string>
+
 
 </resources>
